--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
     <title>Space Shooter</title>
+    <link rel="icon" type="image/x-icon" href="favicon.svg">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
-    <script src="index.js" ></script>
+    <canvas></canvas>
+    <script src="script.js" ></script>
 </body>
 </html>
